2012-04-30  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac,
	src/betaradio.vala: Disable GLib memory profiler.

2012-01-23  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* data/betaradio.desktop.in: Update categories.

2012-01-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/Makefile.am: Don't install header file into the system.

2012-01-13  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/any_tray_icon.c: Fix radio selecting issue. (Fixes issue 2)
	* data/128x128/betaradio.png,
	data/32x32/betaradio.png,
	data/48x48/betaradio.png,
	data/Makefile.am,
	data/betaradio.desktop.in,
	src/any_tray_icon.c,
	src/betaradio.vala: Use icon name instead of icon file.
	* data/Makefile.am: Fix error of Automake.
	* mkdeb.sh: Polish Debian packaging script.
	* src/betaradio.vala: Fix runtime error.
	* po/zh_TW.po: Update zh_TW translation.
	* configure.ac: Bump to 1.4
	* debian/changelog: New upstream release.

2012-01-11  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* Makefile.am,
	configure.ac,
	debian/control,
	src/Makefile.am: Add libltdl support.
	* src/Makefile.am,
	src/any_tray_icon.c,
	src/any_tray_icon.h,
	src/betaradio.vala,
	vapi/Makefile.am,
	vapi/any_tray_icon.vapi: Apply any_tray_icon to use libappindicator
	and fallback to gtk_status_icon.
	* mkdeb.sh: Polish Debian packaging script.

2011-11-18  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac,
	po/zh_TW.po,
	src/betaradio.vala,
	src/json_soup.vala: Add thread support to improve quick feedback.
	* po/zh_TW.po,
	src/betaradio.vala: Prompt to restart program.

2011-07-25  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* debian/changelog: Add more information about the changes of debian/control.

2011-07-22  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac: Add libtool to avoid some compilation error.
	* debian/control: Update Debian policy version.
	* configure.ac: Bump to 1.3