@@ -1,3 +1,7 @@
+2012-07-09  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/any_tray_icon.c: Remove the check of Unity.
+
 2012-04-30  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* configure.ac,
